# TwisterVM

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  Rakefile  Readme  TODO  Twister.cpp  autogen.sh  bytecode.cpp  bytecode.h  configure  configure.ac  dispatch_config.h  dispatch_config.h.in  example.zenc  instruction.cpp  instruction.h  opcode.h  stamp-h2  twister  vm  vm.cpp  vm.h  zen  zen.cpp  zenc  zenc.cpp
assembler/: AsmGen.cpp  AsmGen.h  Assembler.atg  Main.cpp  Parser.cpp  Parser.h  Scanner.cpp  Twisterc.cpp  assembler  out.zenc  twisterc
editor/: twister.el  twister.vim
examples/: ask_name.tw  big.asm  cat.tw  circle.tw  dec_counter.tw  example.asm  example.twc  example2.asm  fac.tw  fah_celcius.tw  fox.tw  getenv.tw  goto.asm  guess.tw  hello_world.tw  imc.tw  label.tw  loop.tw  media.tw  num.tw  number.tw  out.zenc  out2.zenc  pares.tw  register.tw  sin_cos.tw  stars.tw  store_s_teste.tw  sum.tw  system.tw  tabuada.tw  tabuleiro.tw
src/: BadFileException.h  Error.cpp  Error.h  ExecContext.cpp  ExecContext.h  IO.cpp  IO.h  Main.cpp  Makefile.am  Makefile.in  Twister.cpp  Twister.h  VM.cpp  VM.h  bad_file_exception.h  core.cpp  core.h  dispatch.h  error.cpp  error.h  exec_context.cpp  exec_context.h  global.h  instruction.cpp  instruction.h  instructions.rb  not_recognized_file_exception.h  opcode.h  twister  types.h  vm.cpp  vm.h
src/assembler/: AsmGen.h  Makefile.am  Makefile.in  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  Twisterc.atg  Twisterc.cpp  asm_gen.cpp  asm_gen.h  twisterc
src/interpreter/: Main.cpp  Makefile.am
src/lib/: Makefile.am  Makefile.in
src/lib/io/: Makefile.am  Makefile.in  tio.cpp  tio.h
tools/: opcode_gen.rb
